# library-summarizer

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  pyproject.toml
.claude/: settings.json  settings.local.json
summarizer/: __main__.py  ai.py  bq.py  config.py  feed.py  listing.py  scraper.py
tests/: test_feed.py  test_listing.py  test_scraper.py
