[project]
name = "library-summarizer"
version = "0.1.0"
description = "RSS feed summarizer using Gemini (Vertex AI) and BigQuery"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-dotenv>=1.0",
    "google-cloud-aiplatform>=1.60",
    "google-cloud-bigquery>=3.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
